sema/testdata/gcc-c99-extra/reject/utf16-4.c
typedef __CHAR16_TYPE__ char16_t;

char16_t	c0 = u'';
char16_t	c1 = u'ab';
char16_t	c2 = u'\U00064321';

char16_t	c3 = 'a';
char16_t	c4 = U'a';
char16_t	c5 = U'\u2029';
char16_t	c6 = U'\U00064321';
char16_t	c7 = L'a';
char16_t	c8 = L'\u2029';
char16_t 	c9 = L'\U00064321';


int main () {}
